trunk/Archive2/94/7cdb9de13537c0/output
main.cpp:18:19: error: expected ')' before 'theName'
   Employee(string theName, float thePayRate);
                   ^
main.cpp:20:3: error: 'string' does not name a type
   string getName() const;
   ^
main.cpp:26:3: error: 'string' does not name a type
   string name;
   ^
